--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Video Background -->
+    <video class="video-background" loop muted autoplay>
+      <source src="time.mp4" />
+    </video>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
