--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <source src="time.mp4" />
     </video>
     <div class="video-overlay"></div>
-
+    <!-- Container -->
+    <div class="container"></div>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
