--- a/index.html
+++ b/index.html
@@ -14,7 +14,23 @@
     </video>
     <div class="video-overlay"></div>
     <!-- Container -->
-    <div class="container"></div>
+    <div class="container">
+      <!-- Input -->
+      <div class="input-container" id="input-container">
+        <h1>Create a Custom Countdown!</h1>
+        <form class="form" id="countDownForm">
+          <label for="title">Title</label>
+          <input
+            type="text"
+            id="title"
+            placeholder="What are you counting down to?"
+          />
+          <label for="date-picker">Select a Date</label>
+          <input type="date" id="date-picker" />
+          <button type="submit">Submit</button>
+        </form>
+      </div>
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
