--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <li><span>3</span>Minutes</li>
           <li><span>45</span>Seconds</li>
         </ul>
+        <button id="countdown-button">Reset</button>
       </div>
     </div>
     <!-- Script -->
