--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <source src="time.mp4" />
     </video>
     <div class="video-overlay"></div>
+
     <!-- Container -->
     <div class="container">
       <!-- Input -->
@@ -30,8 +31,9 @@
           <button type="submit">Submit</button>
         </form>
       </div>
+
       <!-- Countdown -->
-      <div class="countdown" id="countdown">
+      <div class="countdown" id="countdown" hidden>
         <h1 id="countdown-title">Countdown Title Here!</h1>
         <ul>
           <li><span>3</span>Days</li>
@@ -40,6 +42,13 @@
           <li><span>45</span>Seconds</li>
         </ul>
         <button id="countdown-button">Reset</button>
+      </div>
+
+      <!-- Complete -->
+      <div class="complete" id="complete">
+        <h1 class="complete-title">Countdown Completed</h1>
+        <h1 id="complete-info">Countdown Finished on 05-04-2020</h1>
+        <button id="complete-button">New Countdown</button>
       </div>
     </div>
     <!-- Script -->
