--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <!-- Container -->
     <div class="container">
-      <!-- Input -->
-      <div class="input-container" id="input-container" hidden>
+      <!-- Input Container-->
+      <div class="input-container" id="input-container">
         <h1>Create a Custom Countdown!</h1>
         <form class="form" id="countDownForm">
           <label for="title">Title</label>
@@ -32,7 +32,7 @@
         </form>
       </div>
 
-      <!-- Countdown -->
+      <!-- Countdown Container -->
       <div class="countdown" id="countdown" hidden>
         <h1 id="countdown-title">Countdown Title Here!</h1>
         <ul>
@@ -44,8 +44,8 @@
         <button id="countdown-button">Reset</button>
       </div>
 
-      <!-- Complete -->
-      <div class="complete" id="complete">
+      <!-- Complete Container-->
+      <div class="complete" id="complete" hidden>
         <h1 class="complete-title">Countdown Completed</h1>
         <h1 id="complete-info">Countdown Finished on 05-04-2020</h1>
         <button id="complete-button">New Countdown</button>
