--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- Input Container-->
       <div class="input-container" id="input-container">
         <h1>Create a Custom Countdown!</h1>
-        <form class="form" id="countDownForm">
+        <form class="form" id="countdownForm">
           <label for="title">Title</label>
           <input
             type="text"
