distance created to calculate distance between two times, time constants added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             placeholder="What are you counting down to?"
           />
           <label for="date-picker">Select a Date</label>
-          <input type="date" id="date-picker" />
+          <input type="date" id="date-picker" required />
           <button type="submit">Submit</button>
         </form>
       </div>
