alertText paragraph displayed when there is no time ibput

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
             placeholder="What are you counting down to?"
           />
           <label for="date-picker">Select a Date</label>
-          <input type="date" id="date-picker" required />
+          <input type="date" id="date-picker" />
           <button type="submit">Submit</button>
+          <p id="alert-text" hidden>Please enter a valid date</p>
         </form>
       </div>
 
