complete container displayed if the countDown is completed

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <!-- Complete Container-->
       <div class="complete" id="complete" hidden>
         <h1 class="complete-title">Countdown Completed</h1>
-        <h1 id="complete-info">Countdown Finished on 05-04-2020</h1>
+        <h1 id="complete-info"></h1>
         <button id="complete-button">New Countdown</button>
       </div>
     </div>
